--- a/q/272425.html
+++ b/q/272425.html
@@ -26,17 +26,44 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>Jelly</td><td>240409T135658Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272434#272434">Jonathan</a></td></tr>
-<tr d-ix="1"><td>023</td><td>Python 2</td><td>240409T132525Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272433#272433">Mukundan</a></td></tr>
-<tr d-ix="2"><td>011</td><td>Brainfuck+2</td><td>240409T131959Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272432#272432">None1</a></td></tr>
-<tr d-ix="3"><td>004</td><td>Uiua 0.10.0</td><td>240409T131144Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272431#272431">Tbw</a></td></tr>
-<tr d-ix="4"><td>003</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
-<tr d-ix="6"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
-<tr d-ix="7"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
-<tr d-ix="8"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
+<tr d-ix="0"><td>025</td><td>Brainfuck</td><td>240409T141233Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272436#272436">matteo_c</a></td></tr>
+<tr d-ix="1"><td>022</td><td>Python 2</td><td>240409T132525Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272433#272433">Mukundan</a></td></tr>
+<tr d-ix="2"><td>042</td><td>Haskell</td><td>240409T141048Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272435#272435">totallyh</a></td></tr>
+<tr d-ix="3"><td>003</td><td>Jelly</td><td>240409T135658Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272434#272434">Jonathan</a></td></tr>
+<tr d-ix="4"><td>011</td><td>Brainfuck+2</td><td>240409T131959Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272432#272432">None1</a></td></tr>
+<tr d-ix="5"><td>004</td><td>Uiua 0.10.0</td><td>240409T131144Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272431#272431">Tbw</a></td></tr>
+<tr d-ix="6"><td>003</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
+<tr d-ix="7"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
+<tr d-ix="8"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
+<tr d-ix="9"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
+<tr d-ix="10"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">Brainfuck</a>, 25 bytes</h1>
+<pre><code>-[&gt;+&lt;-----]&gt;--&gt;,[&lt;.&gt;-]&lt;-.
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70yqSgxMy-tNDl7wYKlpSVpuhY7daPttG10QSDWTlfXTifaRs9ON9ZGVw8iD1W2YKEihAEA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 22 bytes</h1>
+<p><em>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/53748/jonathan-allan">@Jonathan Allan</a></em></p>
+<pre class="lang-python prettyprint-override"><code>print 10**input()/9*10
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728oLIkIz_PaMGa8ozMnFSFkKLSVKuYpaUlaboW2wqKMvNKFAwNtLQy8wpKSzQ09S21DA0gkgug1GoDLkMuIy5jLhMuU4gQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h1><a href="https://www.python.org" rel="nofollow noreferrer">Python3</a>, 27 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>print('1'*int(input())+'0')
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwZryjMycVIWQotJUq5ilpSVpuha7C4oy80o01A3VtUB0Zl5BaYmGpqa2uoG6JkTFAii12oDLkMuIy5jLhMsUIgQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 42 bytes</h1>
+
+<pre class="lang-hs prettyprint-override"><code>main=interact(\n-&gt;('1'&lt;$[1..read n])++&quot;0&quot;)
+</code></pre>
+<p><a href="https://tio.run/##y0gszk7Nyfn/PzcxM882M68ktSgxuUQjJk/XTkPdUN1GJdpQT68oNTFFIS9WU1tbyUBJ8/9/UwA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<h2>Math, 42 bytes</h2>
+<pre class="lang-hs prettyprint-override"><code>main=interact(\n-&gt;show$10^read n`div`9*10)
+</code></pre>
+<p><a href="https://tio.run/##y0gszk7Nyfn/PzcxM882M68ktSgxuUQjJk/Xrjgjv1zF0CCuKDUxRSEvISWzLMFSy9BA8/9/UwA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>&gt;ŻY
 </code></pre>
 <p>A full program that accepts a (non-negative<sup>*</sup>) integer, <span class="math-container">\$x\$</span>, and prints <span class="math-container">\$x\$</span> ones followed by a zero.</p>
@@ -50,16 +77,7 @@
     - implicit, smashing print
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 23 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>print(10**input()/9*10)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m728oLIkIz_PaMGa8ozMnFSFkKLSVKuYpaUlaboW2wuKMvNKNAwNtLQy8wpKSzQ09S21DA00IbILoNRqAy5DLiMuYy4TLlOIEAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<h1><a href="https://www.python.org" rel="nofollow noreferrer">Python3</a>, 27 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>print('1'*int(input())+'0')
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwZryjMycVIWQotJUq5ilpSVpuha7C4oy80o01A3VtUB0Zl5BaYmGpqa2uoG6JkTFAii12oDLkMuIy5jLhMsUIgQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu2" class="pu"><h2><a href="https://esolangs.org/wiki/Brainfuck%2B2" rel="nofollow noreferrer">Brainfuck+2</a>, 11 bytes</h2>
+<div id="pu4" class="pu"><h2><a href="https://esolangs.org/wiki/Brainfuck%2B2" rel="nofollow noreferrer">Brainfuck+2</a>, 11 bytes</h2>
 <pre><code>;[&gt;+:-&lt;-]&gt;:
 </code></pre>
 <p><a href="https://none-none1.github.io/Interpret-Esolangs-Online/?lang=QnJhaW5mdWNrKzI_&amp;code=Jzs@O1s8Kz4tXTw6&amp;input=MTIzIDQ1Ngo_#QnJhaW5mdWNrJTJCMgAlM0IlNUIlM0UlMkIlM0EtJTNDLSU1RCUzRSUzQQAxMQ==" rel="nofollow noreferrer">Try it online</a></p>
@@ -72,7 +90,7 @@
 &gt;: Print 0
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.10.0</a>, 4 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.10.0</a>, 4 bytes</h1>
 <pre><code>±⇡+1
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_10_1__RiDihpAgwrHih6ErMQoKRiA4Cg==" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
@@ -86,7 +104,7 @@
 </code></pre>
 <p>Prints the 1s then puts 0 on stack after.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>3</s> <s>4</s> 3  <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>3</s> <s>4</s> 3  <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ý›J
 </code></pre>
 <p>+1 byte as bugfix (<code>L</code> results in <span class="math-container">\$[1,0]\$</span> for edge-case <span class="math-container">\$n=0\$</span>)<br />
@@ -100,7 +118,7 @@
      # (after which it is output implicitly as result to STDOUT)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>Ṭ¬Y
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///hzjWH1kT@///fAgA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -112,7 +130,7 @@
 
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
 <pre><code>ʀ&gt;ṅ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLKgD7huYUiLCIiLCI0Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -125,7 +143,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ä10
 </code></pre>
 <p><a href="https://tio.run/##y00syUjPz0n7//9wi6HB//8GXIZcplyGBgA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -138,7 +156,7 @@
      # (after which the entire stack is joined and output implicitly as result)
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1>APL+WIN, 6 bytes</h1>
+<div id="pu10" class="pu"><h1>APL+WIN, 6 bytes</h1>
 <p>Prompts for integer input:</p>
 <pre><code>⌽0,⎕⍴1
 </code></pre>
