--- a/q/272425.html
+++ b/q/272425.html
@@ -26,19 +26,39 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>020</td><td>Python 2</td><td>240409T132525Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272433#272433">Mukundan</a></td></tr>
-<tr d-ix="1"><td>025</td><td>Brainfuck</td><td>240409T141233Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272436#272436">matteo_c</a></td></tr>
-<tr d-ix="2"><td>042</td><td>Haskell</td><td>240409T141048Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272435#272435">totallyh</a></td></tr>
-<tr d-ix="3"><td>003</td><td>Jelly</td><td>240409T135658Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272434#272434">Jonathan</a></td></tr>
-<tr d-ix="4"><td>011</td><td>Brainfuck+2</td><td>240409T131959Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272432#272432">None1</a></td></tr>
-<tr d-ix="5"><td>004</td><td>Uiua 0.10.0</td><td>240409T131144Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272431#272431">Tbw</a></td></tr>
-<tr d-ix="6"><td>003</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
-<tr d-ix="8"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
-<tr d-ix="9"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
-<tr d-ix="10"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
+<tr d-ix="0"><td>082</td><td>C++ gcc</td><td>240409T145117Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272437#272437">Someone</a></td></tr>
+<tr d-ix="1"><td>020</td><td>Python 2</td><td>240409T132525Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272433#272433">Mukundan</a></td></tr>
+<tr d-ix="2"><td>025</td><td>Brainfuck</td><td>240409T141233Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272436#272436">matteo_c</a></td></tr>
+<tr d-ix="3"><td>042</td><td>Haskell</td><td>240409T141048Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272435#272435">totallyh</a></td></tr>
+<tr d-ix="4"><td>003</td><td>Jelly</td><td>240409T135658Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272434#272434">Jonathan</a></td></tr>
+<tr d-ix="5"><td>011</td><td>Brainfuck+2</td><td>240409T131959Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272432#272432">None1</a></td></tr>
+<tr d-ix="6"><td>004</td><td>Uiua 0.10.0</td><td>240409T131144Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272431#272431">Tbw</a></td></tr>
+<tr d-ix="7"><td>003</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
+<tr d-ix="8"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
+<tr d-ix="9"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
+<tr d-ix="10"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
+<tr d-ix="11"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 20 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://tio.run/##Sy4o0E1PTv7/XzkzLzmnNCXVJjO/uKQoNTHXjiszr0QhNzEzT0OzGsTMsy4uSbGySs7Ms7ODsfNLS2xswEygpsy8dI08HXVDdU0bGwPr2v//DQE" rel="nofollow noreferrer">C++ (gcc)</a>, 82 bytes</h1>
+<pre><code>#include&lt;iostream&gt;
+int main(){int n;std::cin&gt;&gt;n;std::cout&lt;&lt;std::string(n,'1')&lt;&lt;0;}­⁡​‎‎
+</code></pre>
+<p>C++ syntax highlighting doesn't work. :(</p>
+<h2>Explanation</h2>
+<pre><code>#include&lt;iostream&gt;
+int main(){int n;std::cin&gt;&gt;n;std::cout&lt;&lt;std::string(n,'1')&lt;&lt;0;}­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪‏​⁡⁠⁡‌⁢​‎‎⁪⁢⁪⁠⁪⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁤⁣⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁢⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁡⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁡⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁡⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁡⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁢⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁢⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁢⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁢⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁣⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁣⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁣⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁣⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁤⁡⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁢⁪⁠⁪⁢⁤⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁤⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁢⁤⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁡⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁡⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁡⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁡⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁢⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁢⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁢⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁢⁤⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁢⁪⁠⁪⁣⁣⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁣⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁣⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁣⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁤⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁤⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁤⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁣⁤⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁡⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁡⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁡⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁡⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁢⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁢⁢⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁢⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁢⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁣⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁣⁢⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁢⁪⁠⁪⁤⁣⁣⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁣⁤⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁤⁡⁪‏⁠‎⁪⁢⁪⁠⁪⁤⁤⁢⁪‏‏​⁡⁠⁡‌­
+
+#include&lt;iostream&gt;                                               # ‎⁡Imports the I/O library (char* haters be mad)
+int main(){                                                   }  # ‎⁢Initiates the main() function.
+           int n;std::cin&gt;&gt;n;                                    # ‎⁣Initializes variable n and reads it from STDIN.
+                             std::cout&lt;&lt;                         # ‎⁤Prints things to STDOUT.
+                                        std::string(n,'1')       # ‎⁢⁡This constructs a string with the char '1' repeated n times.
+                                                          &lt;&lt;0;   # ‎⁢⁢Appends a 0 and ends the final line.
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 20 bytes</h1>
 <p><em>-3 byte thanks to <a href="https://codegolf.stackexchange.com/users/53748/jonathan-allan">@Jonathan Allan</a></em></p>
 <pre class="lang-python prettyprint-override"><code>print'1'*input()+'0'
 </code></pre>
@@ -48,12 +68,12 @@
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwZryjMycVIWQotJUq5ilpSVpuha7C4oy80o01A3VtUB0Zl5BaYmGpqa2uoG6JkTFAii12oDLkMuIy5jLhMsUIgQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">Brainfuck</a>, 25 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">Brainfuck</a>, 25 bytes</h1>
 <pre><code>-[&gt;+&lt;-----]&gt;--&gt;,[&lt;.&gt;-]&lt;-.
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70yqSgxMy-tNDl7wYKlpSVpuhY7daPttG10QSDWTlfXTifaRs9ON9ZGVw8iD1W2YKEihAEA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 42 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 42 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>main=interact(\n-&gt;('1'&lt;$[1..read n])++&quot;0&quot;)
 </code></pre>
@@ -63,7 +83,7 @@
 </code></pre>
 <p><a href="https://tio.run/##y0gszk7Nyfn/PzcxM882M68ktSgxuUQjJk/Xrjgjv1zF0CCuKDUxRSEvISWzLMFSy9BA8/9/UwA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>&gt;ŻY
 </code></pre>
 <p>A full program that accepts a (non-negative<sup>*</sup>) integer, <span class="math-container">\$x\$</span>, and prints <span class="math-container">\$x\$</span> ones followed by a zero.</p>
@@ -77,7 +97,7 @@
     - implicit, smashing print
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h2><a href="https://esolangs.org/wiki/Brainfuck%2B2" rel="nofollow noreferrer">Brainfuck+2</a>, 11 bytes</h2>
+<div id="pu5" class="pu"><h2><a href="https://esolangs.org/wiki/Brainfuck%2B2" rel="nofollow noreferrer">Brainfuck+2</a>, 11 bytes</h2>
 <pre><code>;[&gt;+:-&lt;-]&gt;:
 </code></pre>
 <p><a href="https://none-none1.github.io/Interpret-Esolangs-Online/?lang=QnJhaW5mdWNrKzI_&amp;code=Jzs@O1s8Kz4tXTw6&amp;input=MTIzIDQ1Ngo_#QnJhaW5mdWNrJTJCMgAlM0IlNUIlM0UlMkIlM0EtJTNDLSU1RCUzRSUzQQAxMQ==" rel="nofollow noreferrer">Try it online</a></p>
@@ -90,7 +110,7 @@
 &gt;: Print 0
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.10.0</a>, 4 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.10.0</a>, 4 bytes</h1>
 <pre><code>±⇡+1
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_10_1__RiDihpAgwrHih6ErMQoKRiA4Cg==" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
@@ -104,7 +124,7 @@
 </code></pre>
 <p>Prints the 1s then puts 0 on stack after.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>3</s> <s>4</s> 3  <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>3</s> <s>4</s> 3  <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ý›J
 </code></pre>
 <p>+1 byte as bugfix (<code>L</code> results in <span class="math-container">\$[1,0]\$</span> for edge-case <span class="math-container">\$n=0\$</span>)<br />
@@ -118,7 +138,7 @@
      # (after which it is output implicitly as result to STDOUT)
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>Ṭ¬Y
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///hzjWH1kT@///fAgA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -130,7 +150,7 @@
 
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
 <pre><code>ʀ&gt;ṅ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLKgD7huYUiLCIiLCI0Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -143,7 +163,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ä10
 </code></pre>
 <p><a href="https://tio.run/##y00syUjPz0n7//9wi6HB//8GXIZcplyGBgA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -156,7 +176,7 @@
      # (after which the entire stack is joined and output implicitly as result)
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>APL+WIN, 6 bytes</h1>
+<div id="pu11" class="pu"><h1>APL+WIN, 6 bytes</h1>
 <p>Prompts for integer input:</p>
 <pre><code>⌽0,⎕⍴1
 </code></pre>
